# multi_graph_cnn

./: .gitignore  README.md  config.yaml  config_MGCNN.yaml  config_sRGCNN  config_sRGCNN.yaml  data.npz  main.py  main.tex  pyproject.toml
clustering/: clustering.py  clustering_config.yaml  find_cluster.py  main.py
clustering/saved_models/0.6_0.0_0.5_10/: accuracy.json  best_model.pth
clustering/saved_models/0.6_0.0_0.5_10_rankWH = 2/: accuracy.json  best_model.pth
clustering/saved_models/0.6_0.6/: accuracy.json  best_model.pth
clustering/saved_models/0.6_0.6_0.5_10_rankWH = 10_gamma=0.1/: accuracy.json  best_model.pth
clustering/saved_models/0.6_0.6_0.5_10_rankWH = 3/: accuracy.json  best_model.pth
clustering/saved_models/0.6_0.6_0.5_10_rankWH = 5_gamma=0.1/: accuracy.json  best_model.pth
clustering/saved_models/0.6_0.6_0.5_10bis/: best_model.pth
clustering/saved_models/0.6_0.6_1_7/: best_model.pth
clustering/saved_models/0.6_0.6_1_7bis/: accuracy.json  best_model.pth
clustering/saved_models/0.7_0.7_0.5_10/: best_model.pth
clustering/saved_models/0.8_0.8/: accuracy.json  (+1 more)
find_imapact_graph/: create_clusters.py  find_cluster.py  main.py  training.py
find_imapct_graph/: main.py
find_impact_graph/: create_clusters.py  impact_graph.yaml  main.py  results.ipynb  training.py  utils.py  visualisations.py
saved_models/20251207-114550/: best_model.pth
shared_models/20251209-080312/: best_model.pth
src/multi_graph_cnn/: data.py  dataset.py  graph_insights.py  loss.py  model.py  result_insights.py  test.py  training.py  utils.py  visualization.py
(+49 files in other folders)
