[tool.poetry]
name = "mutli-graph-cnn"
version = "0.1.0"
description = ""
authors = ["Hugo Pavy <hugo.pavy@gmail.com>"]
readme = "README.md"
packages = [
    { include = "multi_graph_cnn", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
torch = "^2.9.1"
h5py = "^3.15.1"
ipykernel = "^7.1.0"
scipy = "^1.16.3"
python-box = "^7.3.2"
pyaml = "^25.7.0"
matplotlib = "^3.10.7"
torchinfo = "^1.8.0"
tensorboard = "^2.20.0"
pandas = "^2.3.3"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
